# Falcon

./: Makefile  README.md  TODO  data.py  db.sqlite3  nimadir.py  pyproject.toml  requirements.txt
apps/: admin.py  forms.py  models.py  urls.py  views.py
apps/fixtures/: district.json  region.json
apps/migrations/: 0001_initial.py
apps/templatetags/: wishlist.py
core/: settings.py
templates/: product.html
templates/admin/: base_site.html
templates/apps/: root_base.html
templates/apps/admin/: csv_form.html  product_changelist.html
templates/apps/auth/: header_logo.html  login.html  password_reset.html  password_reset_confirm.html  password_reset_done.html
templates/apps/part_html/: navbar.html
templates/apps/product/: add-product.html  product-list.html  product_detail.html  shopping-cart.html
